Added almond and core module and grunt contrib plugin

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,8 +1,13 @@
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=${file.reference.pro-frontend-workflow-config}
 file.reference.pro-frontend-workflow-config=config
 file.reference.pro-frontend-workflow-public_html=public_html
 file.reference.pro-frontend-workflow-test=test
+file.reference.pro-frontend-workflow-test-app=test-app
 files.encoding=UTF-8
 site.root.folder=${file.reference.pro-frontend-workflow-public_html}
+start.file=index.html
 test.folder=${file.reference.pro-frontend-workflow-test}
+web.context.root=/pro-frontend-workflow
